--- a/feed/index.html
+++ b/feed/index.html
@@ -9,8 +9,8 @@
 
 <channel>
 	<title>ธีโรเมียร์ส L75% ขายปลีก-ส่ง ราคาโรงงาน</title>
-	<atom:link href="https://greenspaze.github.io/subtest/feed/" rel="self" type="application/rss+xml" />
-	<link>https://greenspaze.github.io/subtest/</link>
+	<atom:link href="https://blog.sabuymakkub.com/feed/" rel="self" type="application/rss+xml" />
+	<link>https://blog.sabuymakkub.com/</link>
 	<description>ธีโรเมียร์ส L ฟู้ดเกรด 75% ปลอดภัย มีอย.และใบเซอร์รับรองครบถ้วน</description>
 	<lastBuildDate>Wed, 15 Apr 2020 15:35:50 +0000</lastBuildDate>
 	<language>en-US</language>
